--- a/Tips_dataset.ipynb
+++ b/Tips_dataset.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "## Definition\n",
     "\n",
-    "The main reason for collecting data for Tips dataset was to analyse the factors influencing the food server's tips in restaurant. The collection of data was conducted in one restaurant, located in a suburban shopping centre during an interval of two and a half months in early 1990. The following categories of data were assembled on all food served customers:\n",
+    "The main reason for collecting data for Tips dataset was to analyse the factors influencing the food server's tips in restaurant. The collection of data was conducted in one restaurant,by one person, located in a suburban shopping centre during an interval of two and a half months in early 1990. All collected data represents the collector's work schedule.\n",
+    "\n",
+    "The following categories of data were assembled on all food served customers:\n",
     "\n",
     "* Total bill (cost of the meal)including tax, in US dollars\n",
     "* Tip in US dollars\n",
@@ -817,6 +819,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A data frame with 244 rows and 7 variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "_Dataset has 244 rows and 7 columns. By checking the last 5 lines we can see if  all data are showing correctly:_"
    ]
   },
@@ -966,7 +975,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_To display the visualise relationships and histograms between total bill, tip and size of the group we use pairlpot_"
+    "_To visualise relationships of variables: tip, total_bill and size the scatter plots are used, histograms visualise the data distributions . The pairplot is special plot from seaborn,which creates a grid of axes such that each variable in data will by shared in the y-axis across a single row and in the x-axis across a single column.The diagonal axes draw a plot to show the univariate distribution of the data for the variable in that column._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* _source: https://seaborn.pydata.org/generated/seaborn.pairplot.html_"
    ]
   },
   {
@@ -1122,9 +1138,10 @@
     "\n",
     "In average USD19.79 was spent in total and in average USD1.38 of tips was paid. In average the group of 2-3 people visited the resturant during the period, when the sample was collected. \n",
     "\n",
-    "Median (50%) and mean of tips and total bill are similar, which indicates that the datasets are symetric. \n",
+    "There is the difference between median (50%) and mean of tips and total bill in Tips dataset, which indicates that the datasets is not completely symetric. The visualisation of distributions of data through the histograms in pairplot above or in the histograms below reveal that the distribution is actually right skewed.Right skewer distributions means that median is lower value than mean. The median is considered to better represents for the central locations of data then mean.   \n",
     "\n",
-    "Standard deviation shows how the data are distributed in the dataset. Basically, a small standard deviation means that the values in a statistical data set are close to the mean of the data set, on average, and a large standard deviation means that the values in the data set are farther away from the mean, on average. The smallest standard deviations is in the variable size, which proofs that majority of visits was group of two and tree customers."
+    "Standard deviation shows how the data are distributed in the dataset. Basically, a small standard deviation means that the values in a statistical data set are close to the mean of the data set, on average, and a large standard deviation means that the values in the data set are farther away from the mean, on average. The smallest standard deviations is in the variable size, which proofs that majority of visits was group of two and tree customers.\n",
+    "\n"
    ]
   },
   {
@@ -1221,7 +1238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable SEX\n"
+    "### Variable \"SEX\"\n"
    ]
   },
   {
@@ -1548,7 +1565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable DAY"
+    "### Variable \"DAY\""
    ]
   },
   {
@@ -1944,7 +1961,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable SMOKER"
+    "### Variable \"SMOKER\""
    ]
   },
   {
@@ -4567,7 +4584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable TIME"
+    "### Variable \"TIME\""
    ]
   },
   {
@@ -4918,7 +4935,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable SIZE"
+    "### Variable \"SIZE\""
    ]
   },
   {
